feat: main 브랜치에 모든 기능 포함 및 모델 지연 로딩, 의존성 버전 고정 적용

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-# 1. music-genre-classification
-flask
+Flask
+gunicorn
+transformers
+torch==2.7.1+cpu
+requests
 librosa
-tensorflow-cpu==2.19.0
-numpy
 pandas
+numpy
+tensorflow
 scikit-learn==1.6.1
 pydub
-gunicorn
-# 2. music-recommendation-by-bpm
-transformers
-torch
-requests
