--- a/backend/music_genre_app/fly.toml
+++ b/backend/music_genre_app/fly.toml
@@ -13,12 +13,13 @@ primary_region = 'nrt'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
-[[vm]]
+[compute]
   memory = '2gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  size = "shared-cpu-1x"
+
+swap_size_mb = 1024
