최적화(장르): 멀티-스테이지 빌드를 적용하여 Docker 이미지 크기 대폭 감소

--- a/backend/music_genre_app/Dockerfile
+++ b/backend/music_genre_app/Dockerfile
@@ -1,30 +1,43 @@
-# Dockerfile for music_genre_app on Fly.io
+# Dockerfile for music_genre_app on Fly.io (Multi-stage build for optimization)
 
-# 1. 기반 이미지 설정: Python 3.11 슬림 버전을 사용합니다.
-# 'slim' 버전은 배포에 불필요한 패키지를 제외하여 이미지 크기를 줄여줍니다.
-FROM python:3.11-slim
+# --- 1단계: 빌더(Builder) 스테이지 ---
+# 여기서는 필요한 모든 도구를 설치하고 라이브러리를 빌드합니다.
+FROM python:3.11 as builder
 
-# 2. 작업 디렉토리 설정: 컨테이너 내에서 /app 폴더를 기본 경로로 사용합니다.
-WORKDIR /app
-
-# 3. 시스템 의존성 설치: Python 라이브러리가 필요로 하는 시스템 레벨의 도구들을 설치합니다.
-#    - build-essential: C/C++ 코드를 컴파일하는 데 필요한 도구 모음입니다. ('cc' 컴파일러 포함)
-#    - ffmpeg: audioread/librosa가 오디오 파일을 처리하는 데 사용하는 프로그램입니다.
+# 시스템 의존성 설치
 RUN apt-get update && apt-get install -y build-essential ffmpeg && rm -rf /var/lib/apt/lists/*
 
-# 4. Python 의존성 설치: requirements.txt 파일을 먼저 복사하여 라이브러리를 설치합니다.
-#    이 순서는 소스 코드만 변경되었을 때, 매번 라이브러리를 다시 설치하는 것을 방지하여 빌드 속도를 높입니다.
+# 가상환경 생성 및 활성화
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+# requirements.txt 복사 및 의존성 설치
+# --no-cache-dir을 사용하여 pip 캐시를 남기지 않습니다.
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 5. 소스 코드 복사: 현재 폴더(.)의 모든 파일(app.py, model.keras 등)을 컨테이너의 /app 폴더로 복사합니다.
+
+# --- 2단계: 최종(Final) 스테이지 ---
+# 여기서는 실행에 필요한 최소한의 것들만 빌더 스테이지에서 가져옵니다.
+FROM python:3.11-slim
+
+# 작업 디렉토리 설정
+WORKDIR /app
+
+# 시스템 의존성 중 '실행'에만 필요한 ffmpeg만 다시 설치합니다.
+# build-essential 같은 '빌드'용 도구는 최종 이미지에 포함하지 않아 용량을 줄입니다.
+RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
+
+# 빌더 스테이지에서 설치된 Python 가상환경(모든 라이브러리 포함)을 통째로 복사합니다.
+COPY --from=builder /opt/venv /opt/venv
+
+# 가상환경을 활성화합니다.
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+# 소스 코드 복사
 COPY . .
 
-# 6. 서버 실행 명령어: 컨테이너가 시작될 때 Gunicorn 웹 서버를 실행합니다.
-#    - --bind :$PORT : Fly.io가 동적으로 할당하는 포트 번호를 사용합니다. (보통 8080)
-#    - --workers 1 --threads 8 : Fly.io의 기본 CPU(shared-cpu-1x)에 적합한 설정입니다.
-#    - --timeout 0 : 모델 로딩 등 시간이 오래 걸리는 작업이 타임아웃되지 않도록 설정합니다.
-#    - app:app : 'app.py' 파일 안에 있는 'app'이라는 이름의 Flask 객체를 실행하라는 의미입니다.
-# --no-preload: 각 워커가 독립적으로 앱을 로드하도록 하여 시작 부담을 분산시킵니다.
-# --graceful-timeout 60: 워커가 시작되고 응답할 때까지 60초간 기다려줍니다.
+# 서버 실행 명령어 (이전과 동일)
 CMD exec gunicorn --bind :$PORT --workers 1 --threads 8 --timeout 0 --no-preload --graceful-timeout 60 app:app
