수정(장르): Fly.io 메모리 2GB 제한에 맞춰 스왑 메모리 2GB로 최종 조정

--- a/backend/music_genre_app/fly.toml
+++ b/backend/music_genre_app/fly.toml
@@ -17,7 +17,9 @@ primary_region = 'nrt'
   processes = ['app']
 
 [[vm]]
-  size = 'performance-2x'
-  memory = '4gb'
+  size = 'shared-cpu-1x'
+  memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
+
+swap_size_mb = 2048 # 스왑 메모리를 2GB로 늘림
