수정(장르): Fly.io 머신을 performance-1x (2GB RAM) 플랜으로 변경

--- a/backend/music_genre_app/fly.toml
+++ b/backend/music_genre_app/fly.toml
@@ -17,7 +17,7 @@ primary_region = 'nrt'
   processes = ['app']
 
 [[vm]]
-  size = 'shared-cpu-1x'
+  size = 'performance-1x'
   memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
