수정: Dockerfile의 CMD를 Exec 형식으로 변경하여 인수 파싱 오류 해결

--- a/backend/music_genre_app/Dockerfile
+++ b/backend/music_genre_app/Dockerfile
@@ -40,4 +40,4 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 COPY . .
 
 # 서버 실행 명령어 (이전과 동일)
-CMD exec gunicorn --bind :$PORT --workers 1 --threads 8 --timeout 0 --no-preload --graceful-timeout 60 app:app
+CMD ["gunicorn", "--bind", "0.0.0.0:$PORT", "--workers", "1", "--threads", "8", "--timeout", "0", "--no-preload", "--graceful-timeout", "60", "app:app"]
